# qa-tools

./: .gitignore  README.md  browser-extension.user.js  compare_pdfs.bash  fast-pdf-compare.py  requirements.txt  tampermonkey.js  tampermonkey.user.js
ai/: browser-extension.user.js
fast-pdf-compare/: Dockerfile  compare.bash  pyproject.toml
fast-pdf-compare/fast_pdf_compare/: compare.py
