[tool.poetry]
name = "fast-pdf-compare"
version = "0.1.0"
description = ""
authors = ["OpenStax"]

[tool.poetry.dependencies]
python = "^3.8"
pikepdf = "^5.0.1"
pdf2image = "^1.16.0"

[tool.poetry.scripts]
fast_pdf_compare = 'fast_pdf_compare.compare:main'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
